--- a/selenium-elements/pom.xml
+++ b/selenium-elements/pom.xml
@@ -94,7 +94,8 @@
 		<dependency>
 			<groupId>software.xdev</groupId>
 			<artifactId>testcontainers-selenium</artifactId>
-			<version>1.2.2</version>
+			<version>1.2.3</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
